Migrate to JDK 9
Change consists of several mandatory upgrades: gradle, docker-compose and JDK.